# ktools-rust

./: .gitignore  .kbuild.json  AGENTS.md  README.md
docs/: kbuild.md  kconfig.md  ki18n.md
kbuild/: README.md  kbuild.json  kbuild.py
kbuild/docs/: README.md  _config.yml  commands.md  config.md  index.md  kbuild.md  rust-local.md  workflows.md
kbuild/templates/: CMakeLists.txt.tpl  README.md.tpl  agent_BOOTSTRAP.md.tpl  cmake_10_dependencies.cmake.tpl  cmake_20_targets_app.cmake.tpl  cmake_20_targets_sdk.cmake.tpl  cmake_50_install_export.cmake.tpl  cmake_tests_CMakeLists.txt.tpl  demo_bootstrap_CMakeLists.txt.tpl  demo_bootstrap_README.md.tpl  demo_bootstrap_src_main.cpp.tpl  demo_executable_CMakeLists.txt.tpl  demo_executable_README.md.tpl  demo_executable_cmake_tests_CMakeLists.txt.tpl  demo_executable_src_main.cpp.tpl  demo_libraries_CMakeLists.txt.tpl  demo_libraries_README.md.tpl  demo_libraries_config.cmake.in.tpl  demo_libraries_sdk.hpp.tpl  demo_libraries_src_main.cpp.tpl  gitignore.tpl  include_project.hpp.tpl  package_config.cmake.in.tpl  src_project.cpp.tpl
kcli/: .gitignore  .kbuild.json  AGENTS.md  Cargo.toml  README.md
kcli/.cargo/: config.toml
kcli/demo/exe/omega/: Cargo.toml  README.md
kcli/demo/exe/omega/src/: main.rs
kcli/demo/exe/omega/tests/: cli.rs
kcli/docs/: README.md  api.md  behavior.md  examples.md  index.md
kcli/src/: Cargo.toml  backend.rs  model.rs
kcli/tests/: api.rs
ktrace/: .gitignore  .kbuild.json  AGENTS.md  README.md  kbuild.py
projects/: build-cleanup.md  kcli-updates.md  ktrace-updates.md  updates.md
(+86 files in other folders)
